Change app name and fix extra right padding on mobile devices

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -36,7 +36,7 @@ header .tagline a {
 
 .actions {
   display: flex;
-  width: 400px;
+  width: 100%;
   flex-direction: row;
 }
 
